--- a/mapDEV.html
+++ b/mapDEV.html
@@ -7,8 +7,8 @@
         <meta name="description" content="">
         <meta name="msapplication-tap-highlight" content="yes" />
         <meta name="viewport" content="width=device-width, user-scalable=no, initial-scale=1, minimum-scale=1.0, maximum-scale=1.0, minimal-ui" />
-        <link href='http://fonts.googleapis.com/css?family=Cabin:400,400italic,500,600,700' rel='stylesheet' type='text/css'>
-        <link href='http://fonts.googleapis.com/css?family=Open+Sans:300italic,400italic,400,300,600,700,800&amp;subset=latin,latin-ext' rel='stylesheet' type='text/css'>
+        <link href='https://fonts.googleapis.com/css?family=Cabin:400,400italic,500,600,700' rel='stylesheet' type='text/css'>
+        <link href='https://fonts.googleapis.com/css?family=Open+Sans:300italic,400italic,400,300,600,700,800&amp;subset=latin,latin-ext' rel='stylesheet' type='text/css'>
         <!--Place favicon.ico and apple-touch-icon.png in the root directory -->
         <link rel="stylesheet" href="css/custom.css">
         <script src="js/jquery-2.1.0.min.js"></script>
@@ -344,6 +344,6 @@
       src="https://maps.googleapis.com/maps/api/js?key=AIzaSyDHQrUTCUzVx64ogCN_vTwQp03MSX48nRo&callback=initMap&libraries=&v=weekly"
       async
     ></script>
-    </div>
+    </div> 
   </body>
 </html>
