--- a/index.html
+++ b/index.html
@@ -114,9 +114,21 @@
 					</li>
 					<li class="nav-item">
 						<a title="" href="blog.html">Reviews</a>
+						<span class="open-children"><i class="fa fa-angle-down"></i></span>
+						<ul class="subnav">
+							<li><a href="blog.html" title=""><span>Dallas</span></a></li>
+							<li><a href="blog.html" title=""><span>Austin</span></a></li>
+							<li><a href="blog.html" title=""><span>New York</span></a></li>
+						</ul>
 					</li>
 					<li class="nav-item">
 						<a title="" href="mapDEV.html">Map</a>
+						<span class="open-children"><i class="fa fa-angle-down"></i></span>
+						<ul class="subnav">
+							<li><a href="mapDevDallas.html" title=""><span>Dallas</span></a></li>
+							<li><a href="mapDEV.html" title=""><span>Austin</span></a></li>
+							<li><a href="mapDevNewYork.html" title=""><span>New York</span></a></li>
+						</ul>
 					</li>
 					<li class="nav-item">
 						<a title="" href="contact.html">Contact</a>
@@ -124,77 +136,7 @@
 				</ul>
 			</div>
 		</div>
-		<nav id="main-navbar" class="hidden-xs hidden-sm">
-			<div class="nav hidden-xs">
-				<div class="main-reorder pull-right">
-					<a href="#">
-						<i class="fa fa-bars"></i>
-					</a>
-				</div>
-		
-				<div class="logo pull-left">
-					<a href="index.html">
-						<figure>
-							<img src="img/logo1.png" class="light-logo" alt="Berg HTML Theme"/>
-							<img src="img/logo2.png" class="dark-logo" alt="Berg HTML Theme"/>
-						</figure>
-					</a>
-				</div>
-				<div class="main-nav">
-					<ul class="pull-right">
-						<li>
-							<a href="index.html" class=" active   ">home</a>					
-						</li>				
-						<li>
-							<a href="blog.html" class="">reviews</a>
-							<div class="subnav image-subnav">
-								<ul class="subnav-wrapper image-subnav">
-									<li>
-										<a href="blog.html" class="">Dallas</a>
-									</li>
-									<li>
-										<a href="blog.html" class="">New York</a>
-									</li>
-									<li>
-										<a href="blog.html" class="">Austin</a>
-									</li>
-								</ul>
-							</div>
-						</li>
-						<li>
-							<a href="mapDEV.html" class="hover-subnav ">Maps</a>
-							<div class="subnav image-subnav">
-								<ul class="subnav-wrapper">			
-									<li>
-										<a href="mapDevDallas.html">Dallas</a>
-										<div>
-											<a href="mapDevDallas.html" class="menu-img" style="background-image: url('img/dallas.jpg')"></a>
-										</div>
-									</li>
-									<li>
-										<a href="mapDEV.html">Austin</a>
-										<div>							
-											<a href="mapDEV.html" class="menu-img" style="background-image: url('img/austin.jpg')"></a>
-										</div>
-									
-									</li>
-									<li>
-										<a href="mapDevNewYork.html">New York</a>
-										<div>
-											<a href="mapDevNewYork.html" class="menu-img" style="background-image: url('img/NY.jpg')"></a>
-										</div>
-									</li>
-								</ul>
-							</div>
-						</li>	
-						<li>
-							<a href="contact.html" class="">contact</a>	
-						</li>
-		
-					</ul>
-				</div>
-			</div>
-		</nav>
+
 
 
 <header id="home4" class="main-section home hidden-xs"> 
